<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#da9966"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/question" />

        <Button
            android:id="@+id/accident"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#f00"
            android:onClick="btnReport"
            android:text="@string/answer_accident"
            android:textColor="#fff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/brokencar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="btnReport"
            android:text="@string/answer_brokencar"
            android:textSize="20sp" />

        <Button
            android:id="@+id/none"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="btnReport"
            android:text="@string/answer_none"
            android:textSize="20sp" />
    </LinearLayout>


</RelativeLayout>